# Agent_IA_Teradata_V2

./: .gitignore  GIT_SECURITY.md  README.md  install_mcp_dependencies.py  main.py  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  sql_reviewer_cli.py  validate_git.bat  validate_git_security.py  web_interface_enhanced.py  web_interface_validation.py
.github/: copilot-instructions.md
config/: __init__.py  settings.py
knowledge_base/documentation/: Normativa.txt
knowledge_base/examples/: consolidado_CREATE_UPDATE.txt  consolidado_UPDATE.txt
src/: __init__.py  web_interface.py  web_interface_validation.py
src/agents/: __init__.py  explain_generator.py  explain_interpreter.py  sql_reviewer.py  workflow.py
src/rag/: __init__.py  document_loader.py  vector_store.py
src/utils/: __init__.py  azure_openai_utils.py  logging_utils.py  teradata_utils.py
test/: test_advanced_teradata.py  test_azure_connection.py  test_mcp_validation.py  test_rag_system_fixed.py  test_rag_system_guaranteed.py  validate_chromadb.py
